fix all features

--- a/Testrapport/index.html
+++ b/Testrapport/index.html
@@ -8,6 +8,7 @@
 			<li><a href="#log_encryption"> Log and encryption </a></li>
 			<li><a href="#color"> Color feature </a></li>
 			
+			<li><a href="#all"> All feature </a></li>
 		</ul>
 		<h1> Test rapport Chatapp feature selection </h1>
 		<p> 
@@ -44,6 +45,11 @@ We have used the antenna preprocessing tool, by adding #if CONDITION ... #endif,
 		<h2>  color feature enabled </h2>
 		<p> The app only with color enabled, should show color feature dropdown.</p>
 		<img src="color.png" alt="color"/>
+</section>
+<section id="all">
+		<h2>  all features enabled </h2>
+		<p> The app with all features enabled, should show all features.</p>
+		<img src="all_features.jpeg" alt="all-features"/>
 </section>
 	</body>
 
